--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,15 @@
     <title>TITLE</title>
 </head>
 <body>
-    <h1>Index page</h1>
+    <h1>Please log in</h1>
+    <form action="/log-in" method="POST">
+        <label for="username">Username</label>
+        <intput id="username" name="username" placeholder="username" type="text" />
+        
+        <label for="password">Password</label>
+        <input id="password" name="password" type="password" />
+
+        <button>Log In</button>
+    </form>
 </body>
 </html>
