--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,15 +6,20 @@
     <title>TITLE</title>
 </head>
 <body>
-    <h1>Please log in</h1>
-    <form action="/log-in" method="POST">
-        <label for="username">Username</label>
-        <intput id="username" name="username" placeholder="username" type="text" />
-        
-        <label for="password">Password</label>
-        <input id="password" name="password" type="password" />
+    <% if (user) { %>
+        <h1>WELCOME BACK <%= user.username %></h1>
+        <a href="/log-out">LOG OUT</a>
+    <% } else { %>
+        <h1>Please log in</h1>
+        <form action="/log-in" method="POST">
+            <label for="username">Username</label>
+            <input id="username" name="username" placeholder="username" type="text" />
+            
+            <label for="password">Password</label>
+            <input id="password" name="password" type="password" />
 
-        <button>Log In</button>
-    </form>
+            <button>Log In</button>
+        </form>
+    <% } %>
 </body>
 </html>
