Edited login page to include sign up

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,8 @@
 
             <button>Log In</button>
         </form>
+
+        <p>Don't have an account? <a href=/sign-up>Sign up</a></p>
     <% } %>
 </body>
 </html>
