--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
 <body>
     <% if (user) { %>
         <h1>WELCOME BACK <%= user.username %></h1>
+
+        <a href="/settings">Settings</a>
         <a href="/log-out">LOG OUT</a>
     <% } else { %>
         <h1>Please log in</h1>
