--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
         <h1>WELCOME BACK <%= user.username %></h1>
 
         <a href="/settings">Settings</a>
+        <a href="/analytics">Analytics</a>
         <a href="/log-out">LOG OUT</a>
     <% } else { %>
         <h1>Please log in</h1>
