--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TITLE</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <h1>Sign Up</h1>
